--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       </div>
       <div class="credits">
         <br><br>
-        Designed by  &copy; jevanka
+     Designed by 
+      &copy; <a style="color :chartreuse"><i>Jevanka</i></a>
       </div>
     </div>
         
